--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <div class="card">
             <form id="bookingForm" onsubmit="submitBooking(event)">
                 <div style="margin-bottom:15px;"><label style="display:block; margin-bottom:8px; font-weight:bold; color:var(--primary-green);">學生姓名</label><input type="text" id="studentName" placeholder="請輸入姓名" required></div>
-                <div style="margin-bottom:15px;"><label style="display:block; margin-bottom:8px; font-weight:bold; color:var(--primary-green);">Line ID</label><input type="text" id="lineId" placeholder="方便教練聯繫" required></div>
+                <div style="margin-bottom:15px;"><label style="display:block; margin-bottom:8px; font-weight:bold; color:var(--primary-green);">Line ID或手機號碼</label><input type="text" id="lineId" placeholder="方便教練聯繫" required></div>
                 
                 <div style="margin-bottom:15px;">
                     <label style="display:block; margin-bottom:8px; font-weight:bold; color:var(--primary-green);">選擇報名班級</label>
